# inspection

./: .gitignore  Cargo.toml  README.md  optimal_analysis.txt  optimal_analysis2.txt
src/: README.md  judge.rs  naive.rs  onestep.rs  optimal.rs  optimal_analysis.rs  poisson.rs
