[package]
name = "inspection"
version = "0.1.0"
authors = ["Contramundum <contramundum53@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
itertools-num = "0.1.3"
# scan_fmt = "0.2.5"

[[bin]]
name = "judge"
path = "src/judge.rs"

[[bin]]
name = "naive"
path = "src/naive.rs"

[[bin]]
name = "onestep"
path = "src/onestep.rs"

[[bin]]
name = "poisson"
path = "src/poisson.rs"

[[bin]]
name = "optimal_analysis"
path = "src/optimal_analysis.rs"